# sipedon

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  project-config  pyproject.toml  setup.py
fishtank/: __init__.py  __main__.py  classes.py  windows.py
sipedon/: __init__.py  __main__.py  aquarium.py  classes.py  game.py  windows.py
